--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,10 @@ group 'de.debuglevel.cvodb2xml'
 version '0.0.1-SNAPSHOT'
 
 repositories {
-    mavenCentral()
+    jcenter()
+    maven {
+        url "https://dl.bintray.com/debuglevel/maven"
+    }
 }
 
 // application plugin configuration
@@ -31,6 +34,8 @@ dependencies {
     compile 'org.slf4j:slf4j-api:1.7.25'
     compile 'org.slf4j:slf4j-simple:1.7.25'
 
+    compile 'de.debuglevel.odbjdbc:odbjdbc:0.0.1'
+    
     // https://mvnrepository.com/artifact/org.hsqldb/hsqldb
     compile group: 'org.hsqldb', name: 'hsqldb', version: '2.4.1'
 
