--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+index.html
+temp-positions.*
+temp-skills.*
+skills.svg
+Lebenslauf.odb
 
 # Created by https://www.gitignore.io/api/java,gradle,kotlin,intellij
 
